# docs/swagger.json
@@ -35,7 +35,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.PrintResults"
+                            "$ref": "#/definitions/model.PrintResult"
                         }
                     },
                     "400": {
@@ -90,17 +90,6 @@
                 },
                 "var": {
                     "type": "string"
-                }
-            }
-        },
-        "model.PrintResults": {
-            "type": "object",
-            "properties": {
-                "items": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/model.PrintResult"
-                    }
                 }
             }
         }
